bugfix button display on mobile iphone 5'

--- a/app_front/app/stylesheets/customer/components/_main-button.sass
+++ b/app_front/app/stylesheets/customer/components/_main-button.sass
@@ -3,7 +3,10 @@
   +part(hollow)
 
     display: block
-    width: 18em
+    //width: 18em
+    +breakpoint('mobile')
+      //width: 13em
+
     border: none // remove default button, input styling
 
     i
