--- a/public/stylesheets/customer.css
+++ b/public/stylesheets/customer.css
@@ -1704,7 +1704,6 @@ body {
 
 .main-button__hollow {
   display: block;
-  width: 18em;
   border: none;
   font-weight: bold;
   background-color: #ffffff;
